--- a/app/src/main/res/layout/auth_activity.xml
+++ b/app/src/main/res/layout/auth_activity.xml
@@ -36,7 +36,7 @@
 
         <ImageButton
             android:backgroundTint="#4c75a3"
-            android:id="@+id/imageButton3"
+            android:id="@+id/vk_auth"
             android:layout_width="126dp"
             android:layout_height="54dp"
             android:scaleType="fitCenter"
