--- a/app/src/main/res/layout/bot_settings_main_fragment.xml
+++ b/app/src/main/res/layout/bot_settings_main_fragment.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/drawer_layout">
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/navigationView"
