--- a/app/src/main/res/layout/account_fragment.xml
+++ b/app/src/main/res/layout/account_fragment.xml
@@ -21,7 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/mainscreem"
-        android:visibility="invisible"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,10 +30,10 @@
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_width="334dp"
+            android:layout_height="97dp"
             android:layout_marginStart="37dp"
-            android:layout_marginTop="390dp"
+            android:layout_marginTop="460dp"
             android:layout_marginEnd="37dp"
             android:layout_marginBottom="54dp"
             app:layout_constraintBottom_toTopOf="@+id/imageView2"
@@ -45,15 +45,16 @@
 
         <ImageView
             android:id="@+id/imageView2"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_width="334dp"
+            android:layout_height="97dp"
             android:layout_marginStart="36dp"
+            android:layout_marginTop="52dp"
             android:layout_marginEnd="36dp"
-            android:layout_marginBottom="108dp"
+            android:layout_marginBottom="150dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView"
+            app:layout_constraintTop_toBottomOf="@+id/plan_textView"
             app:srcCompat="@drawable/bluecub" />
 
         <TextView
@@ -62,7 +63,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="172dp"
             android:textColor="#166FFF"
-            android:layout_marginTop="90dp"
+            android:layout_marginTop="58dp"
             android:text="@string/bot_list"
             android:textSize="35dp"
             app:layout_constraintStart_toStartOf="parent"
@@ -72,19 +73,19 @@
             android:id="@+id/plan_textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="160dp"
+            android:layout_marginTop="5dp"
             android:layout_marginEnd="185dp"
-            android:textColor="#166FFF"
             android:text="@string/tariff"
+            android:textColor="#166FFF"
             android:textSize="20dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/email_textView" />
+            app:layout_constraintTop_toBottomOf="@+id/textView" />
 
         <TextView
             android:id="@+id/bots_textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="115dp"
+            android:layout_marginTop="75dp"
             android:layout_marginEnd="185dp"
             android:textColor="#166FFF"
             android:text="@string/bot_list"
@@ -96,7 +97,7 @@
             android:id="@+id/email_textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="110dp"
+            android:layout_marginBottom="130dp"
             android:text="@string/email"
             android:textColor="@color/white"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
@@ -110,7 +111,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="175dp"
-            android:layout_marginTop="110dp"
+            android:layout_marginTop="150dp"
             android:text="@string/tariff"
             android:textColor="#166FFF"
             android:textSize="35dp"
