--- a/app/src/main/res/layout/bot_list_fragment.xml
+++ b/app/src/main/res/layout/bot_list_fragment.xml
@@ -19,7 +19,7 @@
         app:srcCompat="@android:drawable/ic_input_add" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:visibility="invisible"
+        android:visibility="visible"
         android:id="@+id/bot_list_recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
